--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,12 @@ spring:
         - id: auth-server
           uri: https://auth-api.root101.dev
           predicates:
-            - Path=/**
+            - Path=/auth/**
           filters:
             - RewritePath=/auth/(?<segment>.*), /latest/$\{segment}
+        - id: expenses-management
+          uri: https://expenses-management-api.root101.dev
+          predicates:
+            - Path=/expenses-management/**
+          filters:
+            - RewritePath=/expenses-management/(?<segment>.*), /latest/$\{segment}
