--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,12 @@ jar {
 }
 
 dependencies {
-
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.0.7'
+
+    //security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+
 
     //OpenApi docs: https://springdoc.org/v2/
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
