app.yml: config `web-application-type` as `reactive`

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,8 @@ server:
     port: ${PORT}
     
 spring:
+  main:
+    web-application-type: reactive
   profiles:
     default: ${PROFILE}
   application:
