--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,8 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.0.7'
 
     //security
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
+    //implementation 'org.springframework.boot:spring-boot-starter-security'
+    //implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
 
 
     //OpenApi docs: https://springdoc.org/v2/
