app.yml: remove cors headers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
 
   cloud:
     gateway:
+      filter:
+        remove-hop-by-hop:
+          - Access-Control-Allow-Origin
+          - Access-Control-Allow-Headers
+          - Access-Control-Allow-Methods
       globalcors:
         corsConfigurations:
           '[/**]':
