--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
-    id 'org.springframework.boot' version '3.2.0'
-    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.springframework.boot' version '3.3.1'
+    id 'io.spring.dependency-management' version '1.1.6'
     id 'java'
     id 'application'
 }
 
 group = 'dev.root101'
 
-version = '1.1.7.SNAPSHOT.20231216'
+version = '2.0.0.RELEASE.20240719'
 
 sourceCompatibility = '21'
 
@@ -21,13 +21,10 @@ jar {
 }
 
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.1.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.1.5'
 
-    //security
-    //implementation 'org.springframework.boot:spring-boot-starter-security'
-    //implementation 'jakarta.servlet:jakarta.servlet-api:6.0.0'
-
-
-    //OpenApi docs: https://springdoc.org/v2/
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    //lombok: autogenerate getters, setters....
+    implementation 'org.projectlombok:lombok:1.18.34'
+    compileOnly 'org.projectlombok:lombok:1.18.34'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
 }
