--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '3.3.1'
+    id 'org.springframework.boot' version '3.3.6'
     id 'io.spring.dependency-management' version '1.1.6'
     id 'java'
     id 'application'
@@ -22,7 +22,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.1.5'
 
     //lombok: autogenerate getters, setters....
-    implementation 'org.projectlombok:lombok:1.18.34'
-    compileOnly 'org.projectlombok:lombok:1.18.34'
-    annotationProcessor 'org.projectlombok:lombok:1.18.34'
+    implementation 'org.projectlombok:lombok:1.18.36'
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+
+    implementation 'dev.root101.commons:commons:5.3.0.RELEASE.20240813'
 }
