--- a/build.gradle
+++ b/build.gradle
@@ -19,12 +19,18 @@ jar {
 }
 
 dependencies {
+    //base api-gateway dependency
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway:4.1.5'
+
+    //security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
     //lombok: autogenerate getters, setters....
     implementation 'org.projectlombok:lombok:1.18.36'
     compileOnly 'org.projectlombok:lombok:1.18.36'
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 
+    //custom exceptions, validations & more
     implementation 'dev.root101.commons:commons:5.3.0.RELEASE.20240813'
 }
