Impr [test]: initial version of tests

--- a/build.gradle
+++ b/build.gradle
@@ -37,4 +37,14 @@ dependencies {
 
     //custom exceptions, validations & more
     implementation 'dev.root101.commons:commons:5.3.0.RELEASE.20240813'
+
+    //tests
+    implementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.testcontainers:postgresql:1.20.4'
+    implementation 'org.testcontainers:junit-jupiter:1.20.4'
+    implementation 'io.projectreactor:reactor-test:3.7.0'
+}
+
+test {
+    useJUnitPlatform()
 }
