--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     //custom exceptions, validations & more
     implementation 'dev.root101.commons:commons:5.3.0.RELEASE.20240813'
 
+    //flyway
+    implementation 'org.flywaydb:flyway-core:11.0.1'
+    implementation 'org.flywaydb:flyway-database-postgresql:11.0.1'
+
     //tests
     implementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.testcontainers:postgresql:1.20.4'
