--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,11 @@ spring:
       enabled: true
 
   flyway:
-    enabled: false                                                    # To enable disable the use of railway
+    enabled: true                                                    #To enable disable the use of railway
     baselineOnMigrate: true
+    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+    user: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
 
 app:
   defaults:
