--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'dev.root101.commons:commons:5.3.0.RELEASE.20240813'
 
     //flyway
+    implementation 'org.postgresql:postgresql:42.7.4'
     implementation 'org.flywaydb:flyway-core:11.0.1'
     implementation 'org.flywaydb:flyway-database-postgresql:11.0.1'
 
