--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.6'
     id 'java'
     id 'application'
+    id 'org.graalvm.buildtools.native' version '0.10.6'
 }
 
 group = 'dev.root101'
@@ -14,8 +15,8 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    enabled = false
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
 }
 
 dependencies {
@@ -36,7 +37,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.36'
 
     //custom exceptions, validations & more
-    implementation 'dev.root101.commons:commons:5.3.0.RELEASE.20240813'
+    implementation 'dev.root101.commons:commons:5.4.2.RELEASE.20250501'
 
     //flyway
     implementation 'org.postgresql:postgresql:42.7.4'
@@ -52,4 +53,17 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+application {
+    mainClass = 'dev.root101.api_gateway.App'
+}
+
+graalvmNative {
+    binaries {
+        main {
+            imageName = 'graalvm'
+            mainClass = 'dev.root101.api_gateway.App'
+        }
+    }
 }
