--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,18 +13,20 @@ spring:
     hibernate:
       ddl-auto: none
   r2dbc:
-    url: r2dbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}          #jdbc:postgresql:/host:port/db-name?stringtype=unspecified
-    username: ${DB_USERNAME}                                          #postgres
-    password: ${DB_PASSWORD}                                          #admin123
+    #varibales must be available during build time, that's why are configured by default, it must be later be overridden by real variables
+    url: r2dbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:api-gateway}          #r2dbc:postgresql:/host:port/db-name
+    username: ${DB_USERNAME:postgres}                                                            #postgres
+    password: ${DB_PASSWORD:admin123}                                                            #admin123
     pool:
       enabled: true
 
   flyway:
-    enabled: true                                                    #To enable disable the use of railway
+    enabled: true                                                                                #To enable disable the use of railway
     baselineOnMigrate: true
-    url: jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-    user: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    #varibales must be available during build time, that's why are configured by default, it must be later be overridden by real variables
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:api-gateway}
+    user: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:admin123}
 
 app:
   defaults:
