--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     hibernate:
       ddl-auto: none
   r2dbc:
-    #varibales must be available during build time, that's why are configured by default, it must be later be overridden by real variables
+    #Variables must be available at compile time (since we started using the native image in v4.1.0), so they are set by default and then overridden with the real values
     url: r2dbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:api-gateway}          #r2dbc:postgresql:/host:port/db-name
     username: ${DB_USERNAME:postgres}                                                            #postgres
     password: ${DB_PASSWORD:admin123}                                                            #admin123
@@ -23,7 +23,7 @@ spring:
   flyway:
     enabled: true                                                                                #To enable disable the use of railway
     baselineOnMigrate: true
-    #varibales must be available during build time, that's why are configured by default, it must be later be overridden by real variables
+    #Variables must be available at compile time (since we started using the native image in v4.1.0), so they are set by default and then overridden with the real values
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:api-gateway}
     user: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:admin123}
