--- a/tools/api_gateway_front/pubspec.yaml
+++ b/tools/api_gateway_front/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_svg: 2.2.0    #para cargar svg
   top_snackbar_flutter: 3.3.0     #snackbars
   flutter_dropzone: 4.2.1       #para soltar ficheros
+  infinite_scroll_pagination: 5.1.0       #paginacion para los logs
 
   #utils
   logger: 2.6.1
