--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,3 +37,5 @@ app:
     password: ${ADMIN_PASSWORD:${app.defaults.password}}
     role: ROLE_GATEWAY_ADMIN
     base-path: ${ADMIN_PATH:_admin}
+  logs:
+    maintainForDays: ${MAINTAIN_LOGS_FOR_DAYS:14}
