Impr [flyway]: Fix flyway config
Include the correct config to run native

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,6 +27,7 @@ spring:
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:api-gateway}
     user: ${DB_USERNAME:postgres}
     password: ${DB_PASSWORD:admin123}
+    locations: classpath:db/migration
 
 app:
   defaults:
